static/style.css
/* ... */
/* ISSUE LIST */

.filters {
  display: flex;
  flex-wrap: wrap;
  gap: 0.5rem 0.25rem;
  padding: 0.5rem 1rem;
}

.filters input {
  width: 120px;
  height: 2rem;
  padding: 0.25rem 0.5rem;
  border: 1px solid var(--gray-300);
  border-radius: 0.25rem;
  transition: width 0.2s;
}

.filters input:not(:placeholder-shown),
.filters input:focus-within {
  width: 240px;
}

.filters select {
  height: 2rem;
  display: flex;
  gap: 0.25rem;
  align-items: center;
  white-space: nowrap;
  padding: 0.25rem 0.5rem;
  font-weight: 600;
  font-size: 14px;
  color: var(--gray-950);
  background-color: var(--gray-200);
  border-radius: 0.25rem;
  cursor: pointer;
}

.filters select:has([value=""]:not(:checked)) {
  font-weight: bold;
  background-color: var(--link-bg);
  color: var(--link);
}

.filters option {
  color: var(--gray-950);
  background-color: var(--gray-100);
}

.issue-controls {
  padding: 0.25rem;
  font-weight: 600;
  font-size: 14px;
  display: flex;
  align-items: center;
  gap: 0.5rem;
}

.issue-pagination {
  display: flex;
  align-items: center;
}

.issue-pagination .issue-page {
  height: 1.5rem;
  min-width: 2rem;
  padding: 0 0.5rem;
  background-color: var(--gray-200);
  border-left: 2px solid var(--gray-100);
  border-right: 2px solid var(--gray-100);
  display: flex;
  align-items: center;
  justify-content: center;
}

.issue-pagination button:first-child {
  border-top-left-radius: 0.25rem;
  border-bottom-left-radius: 0.25rem;
}

.issue-pagination button:last-child {
  border-top-right-radius: 0.25rem;
  border-bottom-right-radius: 0.25rem;
}

.issue-pagination button {
  padding: 0.25rem;
  background-color: var(--gray-200);
  cursor: pointer;
}

.issue-pagination button:hover {
  background-color: var(--gray-300);
}

.issue-list-spinner {
  display: none;
  animation: spin 1s linear reverse infinite;
}

.filters:has(.htmx-request) + .issue-list .issue-list-spinner {
  display: block;
}

@keyframes spin {
  to {
    transform: rotate(360deg);
  }
}

.issue-list-notice {
  display: flex;
  align-items: center;
  gap: 0.25rem;
  background-color: var(--panel-warning);
  border-radius: 0.25rem;
  padding: 0.125rem 0.25rem;
  font-weight: 400;
}

.issue-list-notice span {
  font-weight: 500;
}

.issue-table-container {
  overflow: auto;
}

.issue-table {
  white-space: nowrap;
  font-size: 14px;
  position: sticky;
  top: 56px;
}

.issue-table td, .issue-table th {
  height: 2rem;
}

.issue-table td > *, .issue-table th > * {
  padding: 0.25rem 0.5rem;
  height: 2rem;
  display: flex;
  gap: 0.25rem;
  align-items: center;
  border-bottom: 1px solid var(--gray-300);
  border-right: 1px solid var(--gray-300);
}

.issue-table td > * {
  background-color: var(--gray-50);
  overflow: hidden;
}

.issue-table th > * {
  background-color: var(--gray-100);
  font-weight: 600;
}

.issue-table tr:hover td > * {
  background-color: var(--gray-100);
}

.issue-table td:first-child > *, .issue-table th:first-child > * {
  border-left: 1px solid var(--gray-300);
}

.issue-table thead th > * {
  border-top: 1px solid var(--gray-300);
}

.issue-table tbody td:first-child, .issue-table thead th:first-child {
  position: sticky;
  left: 0;
}

.issue-table-key {
  min-width: 90px;
}

tbody .issue-table-key {
  text-decoration: none;
  font-size: 12px;
  font-weight: 600;
}

.issue-table tbody .issue-table-key:hover {
  color: var(--link);
  background-color: var(--gray-200);
}

.issue-resolved .issue-table-key {
  text-decoration: line-through;
}

.issue-table-summary {
  width: 600px;
}

.issue-table-status {
  width: 155px;
}

.issue-table-user {
  width: 150px;
  text-decoration: none;
}

.issue-table-user:hover, .issue-table-user:focus {
  text-decoration: underline;
}

.issue-table-priority {
  width: 110px;
}

.issue-table-time {
  width: 180px;
}

@media (min-width: 720px) {
  .issue-list {
    padding: 0 1rem 1rem;
  }

  .issue-table-container {
    border-top-left-radius: 0.25rem;
  }

  .issue-table thead th:first-child > * {
    border-top-left-radius: 0.25rem;
  }

  .issue-table thead th:last-child > * {
    border-top-right-radius: 0.25rem;
  }
}

/* ISSUE DETAIL */

.issue {
  max-width: 1200px;
  margin: 0 auto;
  padding: 1rem 1rem 2rem;
}

.avatar {
  display: inline-block;
  width: 1.5rem;
  height: 1.5rem;
  vertical-align: middle;
  border-radius: 50%;
  background-color: var(--gray-400);
}

@media (min-width: 720px) {
  .issue-top {
    display: flex;
    justify-content: space-between;
    align-items: flex-start;
    gap: 1rem;
  }
}

.issue-key {
  width: max-content;
  font-size: 12px;
  color: var(--gray-800);
}

.issue-summary {
  font-size: 24px;
  font-weight: 500;
}

.issue-actions {
  display: flex;
  align-items: center;
  gap: 0.5rem;
  white-space: nowrap;
}

@media (min-width: 720px) {
  .issue-actions {
    flex-direction: row-reverse;
  }
}

.issue-action {
  height: 2rem;
  display: flex;
  gap: 0.25rem;
  align-items: center;
  white-space: nowrap;
  padding: 0.25rem 0.75rem;
  font-weight: 600;
  font-size: 14px;
  border-radius: 0.25rem;
}

.issue-action.issue-open {
  background-color: var(--gray-300);
}

.issue-action.issue-resolved {
  color: var(--gray-50);
  background-color: var(--resolved);
}

.issue-menu-button {
  background-color: var(--gray-300);
  cursor: pointer;
  position: relative;
}

.issue-menu {
  display: none;
  flex-direction: column;
  gap: 0.25rem;
  position: absolute;
  left: 0;
  top: 100%;
  margin-top: 0.5rem;
  padding: 1rem;
  border-radius: 0.25rem;
  background-color: var(--gray-50);
  box-shadow: 0 2px 8px var(--shadow);
  font-weight: normal;
  align-items: flex-start;
  cursor: default;
}

@media (min-width: 720px) {
  .issue-menu {
    left: unset;
    right: 0;
  }
}

.issue-menu-button:focus-within .issue-menu {
  display: flex;
}

.issue-split {
  padding-top: 1rem;
  display: flex;
  flex-direction: column-reverse;
  gap: 1rem 2rem;
}
/* ... */

